# csv_reader

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_tests.sh
src/: main.cpp
src/argParser/: argParser.cpp  argParser.hpp
src/csvReader/: csvReader.cpp  csvReader.hpp  helperTypes.hpp
src/util/: util.cpp  util.hpp
test/: util_test.cpp
test_files/: circularDependency.csv  differentOperators.csv  emptyCell.csv  emptyColumnNames.csv  incorrectFormula.csv  mediumSizeFile.csv  missingValues.csv  randomSpacesInProperFile.csv  rowWithMoreElements.csv  wrongCellReferenceInFormula.csv  wrongRowIndex.csv  zeroDivision.csv
